
20100611:  Added new Yahoo plugin. This will download historical quotes from yahoo. Not all exchanges have been
           implemented. Exchanges will be added on a request basis. There is lots of room for improvements so
           suggestions and patches are welcomed.

20100612:  Moved the preferences options for the bar spacing buttons to each button. Right click on the
           toolbar button to bring up the configure menu.

           Same as above for the chart refresh toolbar button.

20100613:  Decentralizing the preferences editing to each gui element. So we can just right click on the gui
           element itself in order to change the settings. The reamining app wide settings will be moved into
           the preferences toolbar button with a small popup context menu for fast changes.

           Removed the menubar. Not needed if we have a toolbar. More room for charts now.

           Added a context menu to the indicator tabs to change the tab position and modify the number of
           tab rows. Right click on any tab to show the menu. We can extend more space for charts if
           the tabs are arranged on the right side.

20100614:  Last viewed indicators are saved and restored properly now.

           Preferences dialog and toolbar button removed. Now all preferences can be edited directly from the
           gui object by either right clicking the mouse on it for a context menu or if only one option is available,
           a dialog will launch.

20100615:  Internal changes. Moved some functions between classes.

           Default chart object preferences were not being set. Fixed.

           Moved Config defaults into proper gui class initializers.

           Connected all main app load/save signals to gui classes. Startup and shutdown of the app
           is noticeably slower. The price to pay for better OO code.

20100617:  Improved thread performance for CSV and Yahoo plugins.


           